Changelog
=========

7.9-dev - (unreleased)
----------------------

7.8 - (2013-10-04)
------------------
* Change: Updated package dependencies to reference the newly prefered Zope
  locations that require minimum Plone 4.1
  [ichimdav refs #15651]

7.7 - (2013-09-06)
------------------

7.6 - (2013-08-30)
------------------
* Bug fix: Display data owner title in provenance info
  [szabozo0 #16585]

7.5 - (2013-06-17)
------------------
* Feature: Changed data provenance to allow multiple data provenances; and precedence of provenances
  [szabozo0 #9561]
* Bug fix: add an override for manage_beforeDelete to trigger a
  DavizWillBeRemovedEvent; intercept this event to delete the annotation
  on the backreferenced object that involves the deleted daviz
  [tiberich #14341]
* Bug fix: pylint fixes
  [ghicaale refs #14554]
* Feature: locales improved [lepri]

7.4 - (2013-04-17)
------------------
* Bug fix: fix migration in eea.relations integration
  [tiberich #14267]

7.3 - (2013-03-20)
------------------
* Bug fix: make DavizVisualization inherit from Products.ATContentTypes
  instead of plone.app.folder to avoid problem with LinguaPlone generated
  mutators
  [tiberich #14050]

7.2 - (2013-03-18)
------------------
* Bug fix: Fixed loss of data settings customizations if one would have changed
  any other metadata than 'spreadsheet (Copy and paste a data table from a
  file/webpage)'within Edit tab
  [voineali refs #14172]

7.1 - (2013-03-15)
------------------
* Change: make chart selection for relations sortable
  [tiberich #13993]
* Upgrade step: go to /www/@@migrate_daviz_relations to migrate to sortable
  relations for daviz/ims integration
  [tiberich #13993]
* Feature: added information for contributors
  [ciobabog refs #13892]
* Change: Added description to controlpanel fields
  [szabozo0]
* Bug fix: fixed small bug in code that broke get_daviz when daviz was deleted
  [tiberich #13993]

7.0 - (2013-02-25)
------------------